# TestingResume2

./: CMakeLists.txt  CMakePresets.json  FileParser.cpp  FileParser.h  NewTestFile.txt  README.md  TestFile.txt  TestFile1.txt  TestTask.cpp  TestTask.h  TestTask_.cpp  Тестовое задание C++ dev.docx  Тестовое задание C++ dev.txt
libs/libiconv-1.17/lib/.libs/: libiconv.exp  libiconv.lib  libiconv.so.2.6.1
